tests/cases/meta/errors/type-macro-unknown.ari
fn main() -> i64 {
  let value: missing_type!(i64) = 0;
  return value;
}
